update and release

--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>icons demo</title>
+  <title>SVG icon</title>
   <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="./dist/index.css">
