--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 
     @keyframes octocat-wave {
       0%, 100% {
-        transform: rotate(0)
+        transform: rotate(0deg)
       }
       20%, 60% {
         transform: rotate(-25deg)
