update index.html and package.json

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
     </a>
   </p>
   <article>
-    <ul class="nav nav-tabs" role="tablist" id="types"></ul>
+    <ul class="nav nav-pills" role="tablist" id="types"></ul>
     <div class="tab-content" id="icons"></div>
   </article>
 </div>
