--- a/index.html
+++ b/index.html
@@ -4,47 +4,11 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
   <title>SVG icon</title>
-  <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap-theme.min.css">
   <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="./dist/index.css">
-  <style>
-    .github-corner:hover .octo-arm {
-      animation: octocat-wave 560ms ease-in-out
-    }
-
-    .github-corner svg {
-      fill: gray;
-      color: #fff;
-    }
-
-    .github-corner:hover svg {
-      fill: #337ab7;
-    }
-
-    @keyframes octocat-wave {
-      0%, 100% {
-        transform: rotate(0deg)
-      }
-      20%, 60% {
-        transform: rotate(-25deg)
-      }
-      40%, 80% {
-        transform: rotate(10deg)
-      }
-    }
-
-    @media (max-width: 500px) {
-      .github-corner:hover .octo-arm {
-        animation: none
-      }
-
-      .github-corner .octo-arm {
-        animation: octocat-wave 560ms ease-in-out
-      }
-    }
-  </style>
 </head>
 <body>
+<!-- github-corner -->
 <a href="https://github.com/leungwensen/svg-icon" class="github-corner">
   <svg width="80" height="80" viewBox="0 0 250 250" style="position: absolute; top: 0; border: 0; right: 0;">
     <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
@@ -58,18 +22,18 @@
 </a>
 
 <div class="container">
-  <header>
+  <header class="center">
     <div class="logo"></div>
     <h1>SVG Icon</h1>
 
-    <p>an ultimate svg icons collection done right.</p>
+    <p>An ultimate svg icons collection done right.</p>
   </header>
   <p class="center">
     <a class="btn btn-primary btn-lg" id="download">
-      <svg class="si inline">
+      <svg class="si white inline">
         <use xlink:href="#si-ant-download"></use>
       </svg>
-      Download SVG sprite
+      Select & Download
     </a>
   </p>
   <article>
