--- a/index.html
+++ b/index.html
@@ -4,7 +4,6 @@
   <meta charset="UTF-8">
   <meta http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
   <title>SVG icon</title>
-  <link rel="stylesheet" href="./lib/bootstrap/css/bootstrap.min.css">
   <link rel="stylesheet" href="./dist/index.css">
 </head>
 <body>
@@ -21,35 +20,31 @@
   </svg>
 </a>
 
-<div class="container">
-  <header class="center">
-    <div class="logo"></div>
-    <h1>SVG Icon</h1>
+<header class="center">
+  <div class="logo"></div>
+  <h1>SVG Icon</h1>
 
-    <p>An ultimate svg icons collection done right.</p>
-  </header>
-  <p class="center">
-    <a class="btn btn-primary btn-lg" id="download">
-      <svg class="si white inline">
-        <use xlink:href="#si-ant-download"></use>
-      </svg>
-      Select & Download
-    </a>
-  </p>
-  <article>
-    <ul class="nav nav-pills" role="tablist" id="types"></ul>
-    <div class="tab-content" id="icons"></div>
-  </article>
-</div>
-<div id="loading">
-  <div class="si-wrapper si-zero-loading-spinner">
-    <svg class="si">
-      <use xlink:href="#si-zero-loading-spinner"></use>
+  <p>An ultimate SVG icons collection DONE RIGHT.</p>
+</header>
+<p class="center">
+  <a class="btn" id="download">
+    <svg class="si white inline" viewBox="0 0 1792 1792">
+      <path
+        d="M678 336h200q21 0 35.5 14.5T928 386v450h191q20 0 25.5 11.5T1137 875l-327 400q-13 16-32 16t-32-16L419 875q-13-16-7.5-27.5T437 836h191V386q0-21 14.5-35.5T678 336zm575 800h50q10 0 17.5 7.5t7.5 17.5v350q0 10-7.5 17.5t-17.5 7.5H253q-10 0-17.5-7.5T228 1511v-350q0-10 7.5-17.5t17.5-7.5h50q10 0 17.5 7.5t7.5 17.5v175h900v-175q0-10 7.5-17.5t17.5-7.5z"></path>
     </svg>
+    Select & Download
+  </a>
+</p>
+<article id="icons" class="tabs">
+  <ul class="horizontal" id="icon-types"></ul>
+</article>
+<div id="loading">
+  <div class="sk-double-bounce">
+    <div class="sk-child sk-double-bounce1"></div>
+    <div class="sk-child sk-double-bounce2"></div>
   </div>
 </div>
 <script src="./lib/jquery/jquery.min.js"></script>
-<script src="./lib/bootstrap/js/bootstrap.min.js"></script>
 <script src="./dist/index.js"></script>
 </body>
 </html>
