--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <head>
   <meta charset="UTF-8">
   <meta http-equiv="Content-Type" name="viewport" content="width=device-width, initial-scale=1, user-scalable=no"/>
-  <title>SVG icon</title>
+  <meta name="description" content="svg-icon: An ultimate SVG icons collection DONE RIGHT.">
+  <title>svg-icon</title>
   <link rel="stylesheet" href="./dist/index.css">
 </head>
 <body>
@@ -19,10 +20,9 @@
       fill="white" class="octo-body"></path>
   </svg>
 </a>
-
 <header class="center">
   <div class="logo"></div>
-  <h1>SVG Icon</h1>
+  <h1>svg-icon</h1>
 
   <p>An ultimate SVG icons collection DONE RIGHT.</p>
 </header>
