--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div class="sk-child sk-double-bounce2"></div>
   </div>
 </div>
-<script src="./lib/jquery/jquery.js"></script>
+<script src="./dist/lib/jquery-2.2.4.min.js"></script>
 <script src="./dist/index.js"></script>
 </body>
 </html>
